- Added: moz rule, and configurations for "always expanded" state to BetterEssentials - Change: Top margin of the BetterMedia - Media: Fixed variables name - Added: moz rule to disable media controls styling - Fixed: issue with #zen-sidebar-top-buttons not taking the respective size in multiple modes - Added: Width adjustment for tabs when collapsed mode - Added: box-shadow for pinned tabs

--- a/Neo Zen V1.0.0/NeoZen/Features/BetterEssentials/BetterEssentials.css
+++ b/Neo Zen V1.0.0/NeoZen/Features/BetterEssentials/BetterEssentials.css
@@ -1,5 +1,9 @@
 @media not (-moz-bool-pref: "neo-features-better-essentials-disabled") {
     #navigator-toolbox:not([zen-sidebar-expanded="true"]) {
+        & #zen-essentials {
+            margin-bottom: 10px !important;
+        }
+
         & .zen-essentials-container {
             display: grid !important;
 
@@ -16,7 +20,8 @@
             }
 
             @media (-moz-bool-pref: "neo-features-better-essentials-keep-expanded") {
-                max-height: 110px !important;
+                height: 129px !important;
+                max-height: 129px !important;
             }
 
             @media not (-moz-bool-pref: "neo-features-better-essentials-keep-expanded") {
@@ -56,38 +61,40 @@
 }
 
 @media not (-moz-bool-pref: "neo-features-better-essentials-disabled") {
-    :root:not([zen-sidebar-expanded="true"]) {
+    @media not (-moz-bool-pref: "neo-features-better-essentials-keep-expanded") {
+        :root:not([zen-sidebar-expanded="true"]) {
 
-        /* Essentials pseudo element when no essential tab selected */
-        .zen-essentials-container::before {
-            content: "Neo\A Zen" !important;
-            white-space: pre-wrap !important;
-            text-align: center !important;
-            font-size: 11px !important;
-            color: color-mix(in srgb, var(--zen-primary-color) 90%, white) !important;
-            position: sticky !important;
-            top: 0% !important;
-            left: 0% !important;
-            height: 36px !important;
+            /* Essentials pseudo element when no essential tab selected */
+            .zen-essentials-container::before {
+                content: "Neo\A Zen" !important;
+                white-space: pre-wrap !important;
+                text-align: center !important;
+                font-size: 11px !important;
+                color: color-mix(in srgb, var(--zen-primary-color) 90%, white) !important;
+                position: sticky !important;
+                top: 0% !important;
+                left: 0% !important;
+                height: 40px !important;
 
-            opacity: 0.0 !important;
-            transition-delay: 0.1s;
-            transition: opacity 0.4s ease-in-out;
-        }
-
-        .zen-essentials-container:not(:has(.tabbrowser-tab[selected])) {
-            &:not(:hover)::before {
-                opacity: 1.0 !important;
-                visibility: visible !important;
-                display: block !important;
+                opacity: 0.0 !important;
+                transition-delay: 0.1s;
+                transition: opacity 0.4s ease-in-out;
             }
-        }
 
-        /* Hide completely when a tab is selected */
-        .zen-essentials-container:has(.tabbrowser-tab[selected])::before {
-            opacity: 0 !important;
-            visibility: hidden !important;
-            display: none !important;
+            .zen-essentials-container:not(:has(.tabbrowser-tab[selected])) {
+                &:not(:hover)::before {
+                    opacity: 1.0 !important;
+                    visibility: visible !important;
+                    display: block !important;
+                }
+            }
+
+            /* Hide completely when a tab is selected */
+            .zen-essentials-container:has(.tabbrowser-tab[selected])::before {
+                opacity: 0 !important;
+                visibility: hidden !important;
+                display: none !important;
+            }
         }
     }
 }
