--- a/Neo Zen V1.0.0/NeoZen/Theme/Sidebar/Sidebar-Collapsed.css
+++ b/Neo Zen V1.0.0/NeoZen/Theme/Sidebar/Sidebar-Collapsed.css
@@ -1,6 +1,15 @@
 /* Bigger sidebar when collapsed */
 #navigator-toolbox:not([zen-sidebar-expanded="true"]) {
-    max-width: calc(var(--zen-toolbox-max-width) + 12px) !important;
-    min-width: calc(var(--zen-toolbox-max-width) + 12px) !important;
-    padding-bottom: var(--zen-toolbox-padding);
+  max-width: calc(var(--zen-toolbox-max-width) + 12px) !important;
+  min-width: calc(var(--zen-toolbox-max-width) + 12px) !important;
+  padding-bottom: var(--zen-toolbox-padding);
+}
+
+/* Adjust tabs width to the new width of the sidebar */
+#tabbrowser-tabs[orient="vertical"] {
+  &:not([expanded]) {
+    & .tab-background {
+      width: calc(var(--tab-collapsed-background-width) + 2px) !important;
+    }
+  }
 }
